--- a/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModdingSDK/Shrek2ModdingSDK.vcxproj
@@ -168,10 +168,10 @@
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Shrek2Config.h" />
     <ClInclude Include="Shrek2DirectX.h" />
-    <ClInclude Include="Shrek2Entity.h" />
-    <ClInclude Include="Shrek2EntityList.h" />
-    <ClInclude Include="Shrek2EntityModels.h" />
-    <ClInclude Include="Shrek2EntityTypes.h" />
+    <ClInclude Include="Shrek2Actor.h" />
+    <ClInclude Include="Shrek2ActorList.h" />
+    <ClInclude Include="Shrek2ActorModels.h" />
+    <ClInclude Include="Shrek2ActorTypes.h" />
     <ClInclude Include="Shrek2Events.h" />
     <ClInclude Include="Shrek2Inventory.h" />
     <ClInclude Include="Shrek2Storage.h" />
@@ -199,7 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Shrek2Config.cpp" />
-    <ClCompile Include="Shrek2EntityList.cpp" />
+    <ClCompile Include="Shrek2ActorList.cpp" />
     <ClCompile Include="Shrek2Events.cpp" />
     <ClCompile Include="Shrek2Inventory.cpp" />
     <ClCompile Include="Shrek2Storage.cpp" />
