--- a/Shrek2ModdingSDK/Shrek2ModLoader/Shrek2ModLoader.vcxproj
+++ b/Shrek2ModdingSDK/Shrek2ModLoader/Shrek2ModLoader.vcxproj
@@ -111,6 +111,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
