--- a/Shrek2TestProjects/Shrek2TestMod/Shrek2TestMod.vcxproj
+++ b/Shrek2TestProjects/Shrek2TestMod/Shrek2TestMod.vcxproj
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>C:\Users\Kevin\Games\Shrek 2 Modding Folder\System\Shrek 2 Mods\Shrek 2 Test Mod\</OutDir>
+    <OutDir>..\..\..\..\Shrek 2\Shrek2ModdedGame\System\Shrek 2 Mods\Test Mod</OutDir>
     <LibraryPath>C:\Shrek 2 Modding SDK Library;$(LibraryPath);C:\Shrek 2 Modding SDK Library\DirectX8SDK</LibraryPath>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Shrek 2 Modding SDK Library\DirectX8SDK</IncludePath>
   </PropertyGroup>
