Added "Add mod" and "Delete/remove mod" functionality and added Shrek2ModLoader zip

--- a/Shrek2ModdingSDK/Shrek2ModManager/Shrek2ModManager.csproj
+++ b/Shrek2ModdingSDK/Shrek2ModManager/Shrek2ModManager.csproj
@@ -13,11 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Shrek2ModLoader.zip" />
     <None Remove="s2mmlogo.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="s2mmlogo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Shrek2ModLoader.zip" />
   </ItemGroup>
 
   <ItemGroup>
